# mpri-ai-project

./: .gitignore  dune-project  manual-en.md  manual-zh.md  readme.md
libs/domains/: concrete_domain.ml  constant_domain.ml  domain.ml  dune  non_relational_domain.ml  value_domain.ml
libs/frontend/: abstract_syntax_printer.ml  abstract_syntax_printer.mli  abstract_syntax_tree.ml  dune  file_parser.ml  file_parser.mli  lexer.mll  parser.mly
libs/interpreter/: dune  interpreter.ml
libs/mapext/: dune  mapext.ml  mapext.mli
src/: dune  main.ml
